--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,20 @@
+<!-- HEADER -->
 <md-toolbar>
   <span>Dev Tools</span>
+  <span class="spacer"></span>
+  <button md-icon-button *ngIf="sourceLinkActive()" (click)="viewSource()">
+    <md-icon class="md-24" aria-label="View source">code</md-icon>
+  </button>
 </md-toolbar>
 <md-sidenav-container>
+  <!-- SIDENAV -->
   <md-sidenav #sidenav mode="side" opened="true">
-    Jolly good!
+    <md-list>
+      <md-list-item><a routerLink="/about" routerLinkActive="active">About</a></md-list-item>
+      <md-list-item><a routerLink="/text-diff" routerLinkActive="active">Text Diff</a></md-list-item>
+    </md-list>
   </md-sidenav>
-
+  <!-- CONTENT -->
   <div class="content">
     <router-outlet></router-outlet>
   </div>
