--- a/src/app/source-viewer/source-viewer.component.html
+++ b/src/app/source-viewer/source-viewer.component.html
@@ -1,6 +1,14 @@
 <md-tab-group>
-  <md-tab label="Description"><pre>{{readme}}</pre></md-tab>
-  <md-tab label="HTML"><pre>{{html}}</pre></md-tab>
-  <md-tab label="TS"><pre>{{ts}}</pre></md-tab>
-  <md-tab label="SCSS"><pre>{{scss}}</pre></md-tab>
+  <md-tab label="Description">
+    <div class="test2" [innerHtml]="readme | markdown"></div>
+  </md-tab>
+  <md-tab label="HTML">
+    <pre><code [innerHtml]="html | syntaxHighlight: 'html'" class="language-html"></code></pre>
+  </md-tab>
+  <md-tab label="TS">
+    <pre><code [innerHtml]="ts | syntaxHighlight: 'typescript'" class="language-typescript"></code></pre>
+  </md-tab>
+  <md-tab label="SCSS">
+    <pre><code [innerHtml]="scss | syntaxHighlight: 'scss'" class="language-scss"></code></pre>
+  </md-tab>
 </md-tab-group>
