--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,52 @@ md-sidenav-container {
 
 md-sidenav {
   width: 15rem;
+  box-shadow: 3px 0 6px rgba(0,0,0,.24);
+
+  nav {
+
+    h3 {
+      border: none;
+      font-size: 10px;
+      letter-spacing: 1px;
+      line-height: 24px;
+      text-transform: uppercase;
+      font-weight: 400;
+      margin: 0;
+      padding: 0 16px;
+      background: rgba(255, 255, 255, 0.32);
+      color: white;
+    }
+
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    li {
+      padding: 0;
+      border-bottom: 0.1px solid rgba(255, 255, 255, 0.06);
+    }
+
+    a {
+      padding: 0 16px;
+      display: block;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 47px;
+      text-decoration: none;
+      color: rgba(255, 255, 255, 0.7);
+    }
+
+    a:hover, a.active{
+      background: #303030;
+      font-weight: 600;
+      color: #009688;
+    }
+
+
+  }
 }
 
 .spacer {
