--- a/src/app/text-diff/text-diff.component.scss
+++ b/src/app/text-diff/text-diff.component.scss
@@ -4,15 +4,23 @@ md-grid-list {
   height: calc(100vh - 6rem);
 }
 
+textarea {
+  width: 100%;
+  height: 100%;
+  resize: none;
+}
+
 .result {
   font-size: 1.5rem;
 
   /deep/ span.add {
-    background: green;
+    background: #4caf50;
+    padding: 0 0.25rem
   }
 
   /deep/ span.remove {
-    background: red;
+    background: #f34336;
+    padding: 0 0.25rem
   }
 
 }
