--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,6 +1,7 @@
 @import 'theme';
 
 body, html {
+  font-family: 'Roboto', sans-serif;
   padding: 0;
   margin: 0;
   font-size: 16px;
@@ -9,4 +10,19 @@ body, html {
 .fill {
   height: 100%;
   width: 100%;
+  box-sizing: border-box;
+}
+
+pre {
+  background: #000;
+  padding: 1rem;
+  border-radius: 0.2rem;
+}
+
+textarea {
+  background: none;
+  border: none;
+  font-size: 1rem;
+  color: white;
+  outline: none;
 }
