--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -1,7 +1,7 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-$candy-app-primary: mat-palette($mat-indigo);
+$candy-app-primary: mat-palette($mat-teal);
 $candy-app-accent:  mat-palette($mat-pink, A200, A100, A400);
 $candy-app-warn:    mat-palette($mat-red);
 
