--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- HEADER -->
 <md-toolbar color="primary">
+  <md-icon>build</md-icon>
   <span>Dev Tools</span>
   <span class="spacer"></span>
   <button md-icon-button *ngIf="sourceLinkActive()" (click)="viewSource()">
