--- a/src/app/shared/components/panel/panel.component.html
+++ b/src/app/shared/components/panel/panel.component.html
@@ -1,9 +1,9 @@
-<md-card>
-  <md-card-header>
-    <md-card-title>{{title}}</md-card-title>
+<mat-card>
+  <mat-card-header class="flex space-between center">
+    <mat-card-title>{{title}}</mat-card-title>
     <ng-content select="dt-panel-actions"></ng-content>
-  </md-card-header>
-  <md-card-content>
+  </mat-card-header>
+  <mat-card-content>
     <ng-content select="dt-panel-content"></ng-content>
-  </md-card-content>
-</md-card>
+  </mat-card-content>
+</mat-card>
