--- a/src/app/text-diff/text-diff.component.html
+++ b/src/app/text-diff/text-diff.component.html
@@ -1,35 +1,35 @@
 <form [formGroup]="textDiffForm" novalidate>
-  <md-grid-list cols="2" rowHeight="fit" gutterSize="16px">
-    <md-grid-tile>
+  <mat-grid-list cols="2" rowHeight="fit" gutterSize="16px">
+    <mat-grid-tile>
       <dt-panel title="Original Text" class="fill">
         <dt-panel-actions>
-          <button md-icon-button (click)="text1.setValue('')">
-            <md-icon class="md-24" aria-label="Clear original text">clear</md-icon>
+          <button mat-icon-button (click)="text1.setValue('')">
+            <mat-icon class="mat-24" aria-label="Clear original text">clear</mat-icon>
           </button>
         </dt-panel-actions>
         <dt-panel-content>
           <textarea class="fill" mdInput placeholder="Please Enter Text Here" [formControl]="text1"></textarea>
         </dt-panel-content>
       </dt-panel>
-    </md-grid-tile>
-    <md-grid-tile>
+    </mat-grid-tile>
+    <mat-grid-tile>
       <dt-panel title="Changed Text" class="fill">
         <dt-panel-actions>
-          <button md-icon-button (click)="text2.setValue('')">
-            <md-icon class="md-24" aria-label="Clear original text">clear</md-icon>
+          <button mat-icon-button (click)="text2.setValue('')">
+            <mat-icon class="mat-24" aria-label="Clear original text">clear</mat-icon>
           </button>
         </dt-panel-actions>
         <dt-panel-content>
           <textarea class="fill" mdInput placeholder="Please Enter Text Here" [formControl]="text2"></textarea>
         </dt-panel-content>
       </dt-panel>
-    </md-grid-tile>
-    <md-grid-tile colspan="2">
+    </mat-grid-tile>
+    <mat-grid-tile colspan="2">
       <dt-panel title="Result" class="fill">
         <dt-panel-content>
           <div class="fill result" [innerHtml]="textDiff"></div>
         </dt-panel-content>
       </dt-panel>
-    </md-grid-tile>
-  </md-grid-list>
+    </mat-grid-tile>
+  </mat-grid-list>
 </form>
