--- a/src/app/shared/components/panel/panel.component.html
+++ b/src/app/shared/components/panel/panel.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="mat-elevation-z2">
   <mat-card-header class="flex space-between center">
     <mat-card-title>{{title}}</mat-card-title>
     <ng-content select="dt-panel-actions"></ng-content>
