--- a/src/app/text-format/text-format.component.scss
+++ b/src/app/text-format/text-format.component.scss
@@ -23,3 +23,8 @@ mat-tab-group, /deep/ .mat-tab-body-wrapper {
 /deep/ mat-tab-body {
   padding-top: 1rem;
 }
+
+pre {
+  margin: 0;
+  height: 100%;
+}
