--- a/src/app/shared/components/panel/panel.component.scss
+++ b/src/app/shared/components/panel/panel.component.scss
@@ -5,9 +5,8 @@
 mat-card {
   width: calc(100% - 0.5rem);
   height: calc(100% - 0.5rem);
-  background: none;
+  background: #424242;
   border: 1px solid rgba(255, 255, 255, 0.03);
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24), 0 0 2px rgba(0, 0, 0, 0.12);
   padding: 0;
 }
 
