update styling of about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,5 @@
-<div [innerHtml]="readme | async | markdown"></div>
+<dt-panel title="About">
+  <dt-panel-content>
+    <div [innerHtml]="readme | async | markdown"></div>
+  </dt-panel-content>
+</dt-panel>
